<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/event_image_upload"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Title and Go back Button -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">

        <!-- Title -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Image and Description"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Go Back button -->
        <ImageButton
            android:id="@+id/go_back_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Go Back"
            android:src="@drawable/ic_go_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- GeoLocation Toggle -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GeoLocation"
                android:textColor="#333333"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Keep track of users' geolocation"
                android:textColor="#888888"
                android:textSize="14sp" />
        </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/geolocation_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- Description Input -->
    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="24dp"
        android:background="@color/shadedGrey"
        android:gravity="top"
        android:hint="Description"
        android:padding="12dp"
        android:textColor="#333333"
        android:textColorHint="#888888"
        android:textSize="14sp" />

    <!-- Upload Event Poster Button -->
    <Button
        android:id="@+id/upload_poster_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/shadedGrey"
        android:drawableTop="@android:drawable/ic_menu_upload"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:text="Upload a poster"
        android:textColor="#333333"
        android:textSize="14sp" />

    <!-- Create Event Button -->
    <Button
        android:id="@+id/create_event_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/lightBrown"
        android:paddingVertical="14dp"
        android:text="Save changes"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <!-- Exit Form Button -->
    <Button
        android:id="@+id/exit_form_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:paddingVertical="14dp"
        android:text="Exit Form"
        android:textColor="#ffffff"
        android:textSize="16sp" />
</LinearLayout>